--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <section class="header">
         <nav>
-            <a href="index,html"><img src="images/myproject2.png"></a>
+            <a href="index,html"><img src="myproject2.png"></a>
             <div class="nav-links">
 
                 <ul>
@@ -42,37 +42,37 @@
 
         <div class="row">
           <div class="BelowBody-col">
-              <img src="images/project5.jpg">
+              <img src="project5.jpg">
               <div class="layer">
                  <h2>Diving Tips</h2>
               </div>
           </div>   
           <div class="BelowBody-col">
-            <img src="images/project6.jpg">
+            <img src="project6.jpg">
             <div class="layer">
                <h2>Special Packages</h2>
             </div>
         </div>    
         <div class="BelowBody-col">
-            <img src="images/project7.jpg">
+            <img src="project7.jpg">
             <div class="layer">
                <h2>Diving Trips</h2>
             </div>
         </div>    
         <div class="BelowBody-col">
-            <img src="images/project8.jpg">
+            <img src="project8.jpg">
             <div class="layer">
                <h2>Fun Activities</h2>
             </div>
         </div>    
         <div class="BelowBody-col">
-            <img src="images/project5.jpg">
+            <img src="project5.jpg">
             <div class="layer">
                <h2>Special Island</h2>
             </div>
         </div>    
         <div class="BelowBody-col">
-            <img src="images/project9.jpg">
+            <img src="project9.jpg">
             <div class="layer">
                <h2>Games</h2>
             </div>
