--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 </head>
 <body>
+    <style>
+         background-image: url(bg.png);
+    </style>
    <section class="header">
+       
         <nav>
             <a href="index,html"><img src="myproject2.png"></a>
             <div class="nav-links">
