--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <style>
-         background-image: url(bg.png);
+         background-image: bg.png;
     </style>
    <section class="header">
        
