--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
    <section class="sub-header">
         <nav>
-            <a href="index,html"><img src="images/myproject2.png"></a>
+            <a href="index,html"><img src="myproject2.png"></a>
             <div class="nav-links">
 
                 <ul>
@@ -35,7 +35,7 @@
    <section class="about-Us">
     <div class="row">
         <div class="about-col">
-            <img src="images/myproject2.png">
+            <img src="myproject2.png">
                <p>The top provider of diving and watersports in the UAE is Scooba Life. 
                    We were formed in the UAE since 1995 and were initially created in 1999. 
                    With 80 devoted workers, we are the biggest operator in the area.
@@ -53,21 +53,21 @@
                <div class="row">
                    <div class="gallery-col">
                        <h2>Gallery</h2>
-                       <img src="images/proj10.jpg">
-                       <img src="images/proj16.jpg">
-                       <img src="images/proj11.jpg">
-                       <img src="images/proj12.jpg">
-                       <img src="images/project7.jpg">
-                       <img src="images/proj13.jpg">
-                       <img src="images/proj14.jpg">
-                       <img src="images/proj15.jpg">
-                       <img src="images/proj17.png">
-                       <img src="images/proj18.png">
-                       <img src="images/proj19.png">
-                       <img src="images/proj20.jpg">
-                       <img src="images/proj21.jpg">
-                       <img src="images/proj22.png">
-                       <img src="images/proj23.jpg">
+                       <img src="proj10.jpg">
+                       <img src="proj16.jpg">
+                       <img src="proj11.jpg">
+                       <img src="proj12.jpg">
+                       <img src="project7.jpg">
+                       <img src="proj13.jpg">
+                       <img src="proj14.jpg">
+                       <img src="proj15.jpg">
+                       <img src="proj17.png">
+                       <img src="proj18.png">
+                       <img src="proj19.png">
+                       <img src="proj20.jpg">
+                       <img src="proj21.jpg">
+                       <img src="proj22.png">
+                       <img src="proj23.jpg">
                    </div>
 
                </div>
