--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
    <section class="sub-header">
         <nav>
-            <a href="index,html"><img src="images/myproject2.png"></a>
+            <a href="index,html"><img src="myproject2.png"></a>
             <div class="nav-links">
 
                 <ul>
